--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,6 +7,9 @@
   <base href=".">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="-1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> -->
   <link rel="stylesheet" type="text/css" href="assets/font-awesome.min.css" />
