--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,7 @@
   <script src="assets/web-animations.min.js"></script>
 
 
-</head>
+<link href="styles.adce36d5b1b624d1b10d.bundle.css" rel="stylesheet"/></head>
 <a id="go-button">
       <i class="icon-fullscreen" style="margin:4px 4px 0 0; font-size: 60px; color: black;"></i>
     </a>
@@ -32,7 +32,7 @@
       </div>
     </app-root>
   </div>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="scripts.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.78c087f5344980cb78d8.bundle.js"></script><script type="text/javascript" src="polyfills.a6095c137edf51c8fa6d.bundle.js"></script><script type="text/javascript" src="scripts.34e3ad3dccf413449956.bundle.js"></script><script type="text/javascript" src="vendor.008fe28e7a06fddbd3da.bundle.js"></script><script type="text/javascript" src="main.687fd04df3685eb1625d.bundle.js"></script></body>
 
 </html>
 
