--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html id="page_html">
 
 <head>
   <meta charset="utf-8">
@@ -32,7 +32,7 @@
       </div>
     </app-root>
   </div>
-<script type="text/javascript" src="inline.a7f555cc1ff1ac9103e4.bundle.js"></script><script type="text/javascript" src="polyfills.a6095c137edf51c8fa6d.bundle.js"></script><script type="text/javascript" src="scripts.34e3ad3dccf413449956.bundle.js"></script><script type="text/javascript" src="vendor.008fe28e7a06fddbd3da.bundle.js"></script><script type="text/javascript" src="main.f7000b28991e2b502961.bundle.js"></script></body>
+<script type="text/javascript" src="inline.32d4f2968f4d13bd6798.bundle.js"></script><script type="text/javascript" src="polyfills.a6095c137edf51c8fa6d.bundle.js"></script><script type="text/javascript" src="scripts.34e3ad3dccf413449956.bundle.js"></script><script type="text/javascript" src="vendor.008fe28e7a06fddbd3da.bundle.js"></script><script type="text/javascript" src="main.b69655fb1663e2246c21.bundle.js"></script></body>
 
 </html>
 
