--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,13 +12,13 @@
   <meta http-equiv="Expires" content="0" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link href="./assets/bootstrap_.min.css" rel="stylesheet">
+  <script src="./assets/tether.min.js"></script>
+  <script src="./assets/jquery.min.js"></script>
   <script src="./assets/web-animations.min.js"></script>
 
 
-<link rel="stylesheet" href="styles.e41ece9da1f455d55b95.css"></head>
+<link rel="stylesheet" href="styles.b6977fc6759e7fb16f51.css"></head>
 <a id="go-button">
   <i class="pi pi-window-maximize" style="margin:4px 4px 0 0; font-size: 40px !important; color: black;"></i>
 </a>
@@ -34,7 +34,7 @@
       </div>
     </app-root>
   </div>
-<script src="runtime-es2015.66c79b9d36e7169e27b0.js" type="module"></script><script src="runtime-es5.66c79b9d36e7169e27b0.js" nomodule defer></script><script src="polyfills-es5.909cb27ce1772a2cff4d.js" nomodule defer></script><script src="polyfills-es2015.d003691adc9b821059ec.js" type="module"></script><script src="scripts.e220d61891f89afc7ceb.js" defer></script><script src="main-es2015.4a9e9419963a1fbdd552.js" type="module"></script><script src="main-es5.4a9e9419963a1fbdd552.js" nomodule defer></script></body>
+<script src="runtime-es2015.66c79b9d36e7169e27b0.js" type="module"></script><script src="runtime-es5.66c79b9d36e7169e27b0.js" nomodule defer></script><script src="polyfills-es5.909cb27ce1772a2cff4d.js" nomodule defer></script><script src="polyfills-es2015.d003691adc9b821059ec.js" type="module"></script><script src="scripts.e220d61891f89afc7ceb.js" defer></script><script src="main-es2015.c5566f0d2f61f0f513bd.js" type="module"></script><script src="main-es5.c5566f0d2f61f0f513bd.js" nomodule defer></script></body>
 
 </html>
 
